Conección con IA

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -17,5 +17,8 @@
     "success": "User successfully created. You can now log in.",
     "loginLink": "Already have an account? Log In",
     "submitButton": "Register"
+  },
+  "OrionListener": {
+    "button": "Listen"
   }
 }
